--- a/src/downloads/downloads.component.html
+++ b/src/downloads/downloads.component.html
@@ -1,3 +1,9 @@
 <p>
-  downloads works!
+
 </p>
+
+<p>
+  Click the button below to download all recorded data for this plant:
+</p>
+<p></p>
+<input type="submit" value="Download All Data for this Plant" (click)='getData()'>
