--- a/src/login/login.component.html
+++ b/src/login/login.component.html
@@ -2,6 +2,6 @@
   <img src="assets/images/lock.svg" id="lock">
 
   <!-- <button (click)="loginGoogle()" id="google">Login With Google</button> -->
-  <button (click)="loginGoogle()" id="loginout">Login With Google</button>
+  <button (click)="loginGoogle()" id="loginout">Suscribase con Gmail</button>
   <!--<button (click)="logout()">Logout</button>-->
 </div>
