--- a/src/app/plant-selector/plant-selector.component.html
+++ b/src/app/plant-selector/plant-selector.component.html
@@ -13,7 +13,8 @@
   <input type="checkbox" class="plant" id="San Nicolas" value="San Nicolas"> San Nicolas<br>
   <input type="checkbox" class="plant" id="Tamara" value="Tamara"> Tamara<br>
   <input type="checkbox" class="plant" id="Las Vegas" value="Las Vegas"> Las Vegas<br>
-  <input type="checkbox" class="plant" id="San Juan Guarita" value="San Juan Guarita"> San Juan Guarita
+  <input type="checkbox" class="plant" id="San Juan Guarita" value="San Juan Guarita"> San Juan Guarita<br>
+  <!-- Correo Electronico: <input #mail type="text" value="ejemplo@gmail.com"><br> -->
 </form>
 
 <button (click)="sendPlantData()">Submit</button>
