--- a/src/nav/nav.component.html
+++ b/src/nav/nav.component.html
@@ -5,33 +5,12 @@
             <span class="title">POST</span>
         </a>
     </div>
-    <!-- <div class="header-nav" [clr-nav-level]="1">
-    	<a href="./index.html" class="nav-link nav-text">
-    		<span class="title">Plants</span>
-    	</a>
-    	<a href="./about.html" class="nav-link nav-text">
-    		<span class="title">About</span>
-    	</a>
-    	<a href="./howto.html" class="nav-link nav-text">
-    		<span class="title">Installation</span>
-    	</a>
-      <a href="./login" class="pull-right nav-link nav-text ">
-        <span class="title">Login</span>
-      </a>
-    </div> -->
     <div class="header-nav" [clr-nav-level]="1">
     	<!-- <a href="./index.html" class="nav-link nav-text">Plants</a> -->
-      <a href="./plant" class="nav-link nav-text">Plants</a>
-    	<a href="./about" class="nav-link nav-text">About</a>
-    	<a href="./installation" class="nav-link nav-text">Installations</a>
-      <a href="./login" class="pull-right nav-link nav-text ">Login</a>
-      <a id='selector' href="./plant-selector" class="pull-right nav-link nav-text">Selector</a>
+      <a [routerLink]="['./plant']" class="nav-link nav-text">Plants</a>
+    	<a [routerLink]="['./about']" class="nav-link nav-text">About</a>
+    	<!--<a [routerLink]="['./installation']" class="nav-link nav-text">Installations</a>-->
+      <a [routerLink]="['./login']" class="pull-right nav-link nav-text ">Suscribir</a>
+      <!-- <a id='selector' [routerLink]="['./plant-selector']" class="pull-right nav-link nav-text">Selector</a> -->
     </div>
 </clr-header>
-<!-- <ul>
-  <li><a href="#">POST</a></li>
-  <li><a href="./index.html">Plants</a></li>
-  <li><a href="./about.html">About</a></li>
-  <li><a href="./howto.html">Installation</a></li>
-  <li style="float:right"><a class="active" href="./login">Login</a></li>
-</ul> -->
