--- a/src/plant/plant.component.html
+++ b/src/plant/plant.component.html
@@ -11,13 +11,13 @@
     <clr-tab>
         <button clrTabLink>Tables</button>
         <clr-tab-content *clrIfActive="false">
+          <my-table></my-table>
         </clr-tab-content>
     </clr-tab>
     <clr-tab>
         <button clrTabLink>Downloads</button>
         <clr-tab-content *clrIfActive="false">
-        <!-- <plant-downloads></plant-downloads> -->
-        downloads
+          <my-downloads></my-downloads>
         </clr-tab-content>
     </clr-tab>
 </clr-tabs>
