--- a/src/sidenav/sidenav.component.html
+++ b/src/sidenav/sidenav.component.html
@@ -6,12 +6,14 @@
 			<label for="tabexample2">Plant List</label>
 			<ul class="nav-list">
 				<br><a href="./plant"><button class = "unstyled-button" (click) = "onClickMe('Agalteca')">Agalteca</button></a>
+				<!-- <br><button class="unstyled-button" (click) = "onClickMe('Agalteca')">Agalteca</button></a> -->
 				<br><a href="./plant"><button class = "unstyled-button" (click) = "onClickMe('Alauca')">Alauca</button></a>
 				<br><a href="./plant"><button class = "unstyled-button" (click) = "onClickMe('Atima')">Atima</button></a>
 				<br><a href="./plant"><button class = "unstyled-button" (click) = "onClickMe('Cautro Comunidades')">Cuatro Comunidades</button></a>
 				<br><a href="./plant"><button class = "unstyled-button" (click) = "onClickMe('Otoro')">Otoro</button></a>
 				<br><a href="./plant"><button class = "unstyled-button" (click) = "onClickMe('Marcala')">Marcala</button></a>
 				<br><a href="./plant"><button class = "unstyled-button" (click) = "onClickMe('Moroceli')">Moroceli</button></a>
+				<!-- <br><button class="unstyled-button" (click) = "onClickMe('Moroceli')">Moroceli</button> -->
 				<br><a href="./plant"><button class = "unstyled-button" (click) = "onClickMe('Matias')">Matias</button></a>
 				<br><a href="./plant"><button class = "unstyled-button" (click) = "onClickMe('San Nicolas')">San Nicolas</button></a>
 				<br><a href="./plant"><button class = "unstyled-button" (click) = "onClickMe('Tamara')">Tamara</button></a>
