removed subscribe page

--- a/src/nav/nav.component.html
+++ b/src/nav/nav.component.html
@@ -10,7 +10,7 @@
       <a [routerLink]="['./plant']" class="nav-link nav-text">Plants</a>
     	<a [routerLink]="['./about']" class="nav-link nav-text">About</a>
     	<!--<a [routerLink]="['./installation']" class="nav-link nav-text">Installations</a>-->
-      <a [routerLink]="['./login']" class="pull-right nav-link nav-text ">Suscribir</a>
+	<!--<a [routerLink]="['./login']" class="pull-right nav-link nav-text ">Suscribir</a>-->
       <!-- <a id='selector' [routerLink]="['./plant-selector']" class="pull-right nav-link nav-text">Selector</a> -->
     </div>
 </clr-header>
